# legion

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.docs  Legion.example.toml  Legion.example.yml  README.md  Rocket.toml  bors.toml  build.rs  test.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-daemon.json
.github/: changelog-types.json  renovate.json
.github/workflows/: cd.yml  ci.yml  labels.yml
languages/assembly_as/: Dockerfile  run.sh
languages/assembly_fasm/: Dockerfile  run.sh
languages/assembly_gcc/: Dockerfile  run.sh
languages/assembly_jwasm/: Dockerfile  run.sh
languages/assembly_nasm/: Dockerfile  run.sh
languages/bash/: Dockerfile  run.sh
languages/befunge/: Dockerfile  run.sh
languages/brainfuck/: Dockerfile  brainfuck.c  run.sh
languages/bun/: Dockerfile  run.sh
languages/c/: Dockerfile  run.sh
languages/cpp/: Dockerfile  run.sh
languages/crystal/: Dockerfile  run.sh
languages/csharp/: Dockerfile  run.sh
languages/deno/: Dockerfile  run.sh
languages/elixir/: Dockerfile  run.sh
languages/erlang/: Dockerfile  run.sh
languages/fsharp/: Dockerfile  run.sh
languages/go/: Dockerfile  run.sh
languages/haskell/: Dockerfile  run.sh
languages/java/: Dockerfile  run.sh
languages/javascript/: Dockerfile  run.sh
languages/julia/: Dockerfile  run.sh
languages/lolcode/: Dockerfile  run.sh
languages/lua/: Dockerfile  run.sh
languages/objective_c/: Dockerfile  run.sh
languages/perl/: Dockerfile  run.sh
languages/php/: Dockerfile  run.sh
languages/python/: Dockerfile  run.sh
languages/ruby/: Dockerfile  run.sh
languages/rust/: Dockerfile  run.sh
languages/shakespeare/: Dockerfile  run.sh
languages/spim/: Dockerfile  run.sh
languages/sqlite/: Dockerfile  run.sh
languages/typescript/: Dockerfile  run.sh
languages/zig/: Dockerfile  run.sh
src/: config.rs  docker.rs  docs.rs  error.rs  main.rs  util.rs
src/routes/: cleanup.rs  containers.rs  eval.rs  languages.rs  mod.rs
test-programs/: assembly_as.s  assembly_fasm.s  assembly_gcc.s  assembly_jwasm.s  assembly_nasm.s  befunge.b93  csharp.cs  erlang.erl  shakespeare.spl  sqlite.sql
test-programs/assembly_as/: hello-world.s  input.s
test-programs/bun/: input.js
test-programs/c/: input.c
test-programs/cpp/: input.cc
test-programs/crystal/: input.cr
test-programs/csharp/: input.cs
test-programs/deno/: input.ts
test-programs/elixir/: input.exs
test-programs/erlang/: input.erl
test-programs/fsharp/: input.fs
test-programs/haskell/: hello-world.hs  (+1 more)
(+16 files in other folders)
