[package]
name = "legion"
version = "0.1.3"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
rayon = "1.7.0"
owo-colors = "3.5.0"
snowflake = "1.3.0"
libc = "0.2.147"

[dependencies.rocket]
version = "=0.5.0"
features = ["json"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dependencies.config]
version = "0.13.3"
features = ["toml", "yaml"]

[dependencies.rocket_okapi]
version = "0.8.0"
features = ["swagger"]
