[package]
name = "legion"
version = "0.1.3"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
owo-colors = "4.0.0"
libc = "0.2.147"
axum = "0.7.5"
tracing = "0.1.40"
serde_json = "1.0.120"
futures-util = "0.3.30"
nanoid = "0.4.0"
guess_host_triple = "0.1.3"
termsize = "0.1.8"
textflow = "0.2.0"
console = "0.15.8"

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dependencies.config]
version = "0.14.0"
features = ["toml", "yaml"]

[dependencies.utoipa]
version = "4.2.3"
features = ["axum_extras"]

[dependencies.utoipa-swagger-ui]
version = "8.0.0"
features = ["axum"]

[dependencies.tower-http]
version = "0.5.2"
features = ["trace"]

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
paste = "1.0.15"
tower = "0.4.13"

[build-dependencies]
built = "0.7.4"
